--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="action_settings">Settings</string>
-    <string name="api_key"></string>
+    <string name="api_key">YOUR_API_KEY</string>
     <string name="movies_base_url">http://api.themoviedb.org/3/discover/movie?</string>
     <string name="image_base_url">http://image.tmdb.org/t/p/w185</string>
     <string name="title_activity_movie_detail">Details</string>
@@ -10,6 +10,7 @@
     <string name="api_param_key">api_key</string>
     <string name="most_popular_url_value">popularity.desc</string>
     <string name="highest_rated_url_value">vote_average.desc</string>
+    <string name="check_internet_connection">Check Internet Connection</string>
     <string-array name="sort_choice_list">
         <item>Most Popular</item>
         <item>Highest Rated</item>
