--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="action_settings">Settings</string>
-    <string name="api_key">YOUR_API_KEY</string>
+    <string name="api_key">ffe6e61f171a46ab95f2b3105b553f5c</string>
     <string name="movies_base_url">http://api.themoviedb.org/3/discover/movie?</string>
-    <string name="image_base_url">http://image.tmdb.org/t/p/w185</string>
+    <string name="image_base_url">http://image.tmdb.org/t/p/w185/</string>
     <string name="title_activity_movie_detail">Details</string>
     <string name="fetch_movies_tag">tag_fetch_movies</string>
     <string name="sort_param_key">sort_by</string>
@@ -15,4 +15,7 @@
         <item>Most Popular</item>
         <item>Highest Rated</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
